ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0, 7.3.0-rc2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v7.3
    • Service Arch 2024-02-05
    • 135
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      See the writeup in BF-31478 for more details-- right now, we remove the client from the _clientByOperationId map in the destructor of the ClientState decoration. However, if somebody tries to access the client in the small window between client destruction and the destruction of the ClientState object, they will encounter a segfault.

            Assignee:
            Erin McNulty (Inactive)
            Reporter:
            Erin McNulty (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: