SERVER-85628: Ensure that the client is removed from _clientByOperationId map before destruction (#18301)

GitOrigin-RevId: d2bf10e048dea8691b29cc7ecb4e52ab8fc46790